--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
   
         <img src="./assets/Startup.png" alt=""  width="100">    
 <div id="list1">
-        <ul >
-    <li>Home</li>
-    <li>AboutUs</li>
-    <li>ContactUs</li>
-    <li>Login</li>
-</ul>    
+    
+    <a href="#">Home</a>
+    <a href="#">AboutUs</a>
+    <a href="#">ContactUs</a>
+    <a href="#">Login</a>   
 </div>
 </nav>
 
